Updated UI with error info

--- a/manifest.yml
+++ b/manifest.yml
@@ -15,3 +15,6 @@ modules:
 app:
   id: ari:cloud:ecosystem::app/1d0c5aad-f460-4c56-b93c-323f47924e57
   name: bug-trap
+permissions:
+  scopes:
+    - "storage:app"
