--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@forge/api": "^2.3.0",
-    "@forge/ui": "^0.13.1"
+    "@forge/ui": "^0.13.1",
+    "moment": "^2.29.1"
   }
 }
